@@ -1140,12 +1140,13 @@
               source = 'if("form" in e&&/^(?:radio|checkbox)$/i.test(e.type)&&e.checked){' + source + '}';
               break;
             case 'enabled':
+              // we assume form controls have a `form` and `type` property
               // does not consider hidden input fields
-              source = 'if((("form" in e&&e.type.toLowerCase()!=="hidden")||s.isLink(e))&&!e.disabled){' + source + '}';
+              source = 'if((("form" in e&&e.type&&e.type.toLowerCase()!=="hidden")||s.isLink(e))&&!e.disabled){' + source + '}';
               break;
             case 'disabled':
               // does not consider hidden input fields
-              source = 'if("form" in e&&e.type.toLowerCase()!=="hidden"&&e.disabled){' + source + '}';
+              source = 'if("form" in e&&e.type&&e.type.toLowerCase()!=="hidden"&&e.disabled){' + source + '}';
               break;
 
             // CSS3 target pseudo-class
